--- a/dimon-web/package.json
+++ b/dimon-web/package.json
@@ -2,7 +2,7 @@
   "name": "dimon-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Arindam-Mondal.github.io/dimon/dimon-web",
+  "homepage": "http://Arindam-Mondal.github.io/dimon",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
